:recycle: [open-formulieren/open-forms#4917] Fix icon spacing in buttons with design tokens
The utrecht-button component already has design tokens to control the
spacing between text and icon (or whatever the elements are), so
we should instead specify those rather than relying on custom CSS that
is not themeable.

--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -52,9 +52,3 @@
     }
   }
 }
-
-.openforms-button-with-icon {
-  display: inline-flex;
-  flex-direction: row;
-  column-gap: 8px;
-}
